--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,10 @@ title: About Shao Huan
 	<p style="text-indent:50px">
 	My name is shaohuan and I am 30 years old. I graduated as an postgraduate from the Department of Computer Science and 
 	Technology in Shanghai University in April 2011, and my major is data mining.<br>
-	Since the year I graduated, I worked as a senior software engineer in Baosight Company, serving in the Research and Development 
+	</p>
+	<p>Since the year I graduated, I worked as a senior software engineer in Baosight Company, serving in the Research and Development 
 	Dept until Dec 2014.<br>
+	</p>
+	<p>
 	Now I am working in VIP as a senior front-end and mobile hybrid developer.
 	<p>
