--- a/cv/index.html
+++ b/cv/index.html
@@ -15,7 +15,6 @@ title: Huan Shao
 
 					<h2>Select Publications</h2>
 
-					<p><strong>Huan, S.</strong> (204). Title of a Chapter You Wrote for a Book. In I.M Editor (Ed.), <em>The Book I Contributed To</em> (pp. 97-108). City, ST: Publisher Name. Chapter available at: <a href="#">http://permalink</a>.
-
+					<p><strong>Huan, S.</strong> (204). 
 
 	</div>
